--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -1,4 +1,61 @@
 name: unity
-features:
-  publish:
-   - STORE-FLAG
+version: 3.6.9.1
+schema: 1
+scm: github.com/pubnub/unity
+changelog:
+  - version: v3.6.9.1
+    date: 
+    changes:
+      - type: improvement
+        text: A new debug symbol to reduce the usage of coroutines. Set REDUCE_PUBNUB_COROUTINES, to use the alternate logic for www coroutines used by the PubNub's SDK. When using this option it is recommended that you call TerminateCurrentSubscriberRequest when the app comes back to the foreground else an ongoing long request will wait till the timeout value to abort and reinit the request.
+      - type: improvement
+        text: For iOS if the value of NonSubscribeTimeout and SubscribeTimeout is greater than 59 secs, the SDK will force the value to be 59 secs.
+  - version: v3.6.9.0
+    date: 
+    changes:
+      - type: improvement
+        text: Refactored code.
+      - type: improvement
+        text: JSON library: the pre-compiler directives to choose between MiniJSON and JSONFx have been moved to the class JSONSerializer.cs.
+      - type: improvement
+        text: Logging: In addition to setting the variables PubnubLogLevel = LoggingMethod.Level.Info and PubnubErrorLevel = PubnubErrorFilter.Level.Info you also need to add a "define symbol": ENABLE_PUBNUB_LOGGING for each of the platform you want to enable logging. This setting is available in the Unity Editor: File-> Build Settings -> Player Settings -> Other Settings -> Configuration -> Scripting define symbols. After you type ENABLE_PUBNUB_LOGGING in it do remember to press return with the focus still in the text box or your setting will not be saved.
+      - type: feature
+        text: Add mobile push methods.
+      - type: improvement
+        text: Default value of SSL is now true.
+  - version: v3.6.8.8
+    date: 
+    changes:
+      - type: bug
+        text: some fixes for subscribe request timeouts.
+  - version: v3.6.8.7
+    date: 
+    changes:
+      - type: improvement
+        text: removes forceful garbage collection.
+  - version: v3.6.8.6
+    date:
+    changes:
+      - type: bug
+        text: Fix for "null" message in callback when a message contains multiple messages, one of which is of type System.Collections.Generic.Dictionary`2[System.String,System.Object].
+  - version: v3.6.8.4
+    date:
+    changes:
+      - type: bug
+        text: Duplicate messages on some occasions.
+  - version: v3.6.8.3
+    date:
+    changes:
+      - type: bug
+        text: Non subscribe callbacks were not fired when called from within a callback of an earlier request.
+  - version: v3.6.8.1
+    date:
+    changes:
+      - type: bug
+        text: Missed messages when adding a channel to multiplexed.
+      - type: bug
+        text: Sub timeout gets fired when in app goes in background and the request is not complete.
+      - type: bug
+        text: User State didn't change in some cases.
+      - type: bug
+        text: Multiple requests heartbeats were running.
