--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -77,3 +77,25 @@ changelog:
         text: User State didn't change in some cases.
       - type: bug
         text: Multiple requests heartbeats were running.
+features:
+  access:
+    - GRANT
+    - AUDIT
+  channel-groups:
+    - ADD-CHANNELS
+    - REMOVE-CHANNELS
+    - LIST-GROUPS
+    - LIST-CHANNELS-IN-GROUP
+  push:
+    - ADD-DEVICE-TO-CHANNELS
+    - REMOVE-DEVICE-FROM-CHANNELS
+    - LIST-CHANNELS-FROM-DEVICE
+    - REMOVE-DEVICE
+  presence:
+    - HERE-NOW
+    - WHERE-NOW
+    - SET-STATE
+    - GET-STATE
+    - HEARTBEAT
+  publish:
+   - STORE-FLAG
