--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -1,8 +1,11 @@
 name: unity
-version: 3.7.2
+version: 3.7.3
 schema: 1
 scm: github.com/pubnub/unity
 changelog:
+  - version: v3.7.3
+      - type: bug
+        text: Fixed SetGameObject
   - version: v3.7.2
     date: 
     changes:
