--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -9,7 +9,7 @@ changelog:
         text: "Changed the JSON lib to use: https://github.com/MarkerMetro/MarkerMetro.Unity.JsonFx, as it is compatible with Windows store."
         type: improvement
       - 
-        text: "BouncyCastle(http://www.bouncycastle.org/csharp/) is used to crypto functionality."
+        text: "BouncyCastle(http://www.bouncycastle.org/csharp/) is used for crypto functionality."
         type: improvement
     date: ~
     version: v3.7.5
