--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -168,6 +168,7 @@ features:
     - SUBSCRIBE-WITH-TIMETOKEN
     - SUBSCRIBE-WILDCARD
     - SUBSCRIBE-FILTER-EXPRESSION
+    - SUBSCRIBE-PUBSUB-V2
   time: 
     - TIME-TIME
 name: unity
