--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -160,6 +160,7 @@ features:
     - PUBLISH-WITH-METADATA
     - PUBLISH-GET
     - PUBLISH-ASYNC
+    - PUBLISH-MESSAGE-TTL
   push: 
     - PUSH-ADD-DEVICE-TO-CHANNELS
     - PUSH-REMOVE-DEVICE-FROM-CHANNELS
@@ -179,6 +180,7 @@ features:
     - SUBSCRIBE-WILDCARD
     - SUBSCRIBE-FILTER-EXPRESSION
     - SUBSCRIBE-PUBSUB-V2
+    - SUBSCRIBE-PUBLISHER-UUID
   time: 
     - TIME-TIME
 name: unity
