--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -219,6 +219,8 @@ supported-platforms:
       - Windows 7+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support.
       - Ubuntu 12.04+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support.
       - Mac OS X 10.8+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support.
+    editors:
+      - Unity 5.5.1
 name: unity
 schema: 1
 scm: github.com/pubnub/unity
