travis scripts updates

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,4 @@ env:
   - secure: Uem1kFle3VPAmD7R2ccHkUwjmAhiN1+LnjO/TbvcI2JSZ+Q1QuMO2QU9168Ef6uAYAOgk2jxaC3q4JMPD1xFsrfs2ODOtYnCFJtHZFp5F9A5ZOwmO/7TyZdfi3rJPOi85LGdjsLLHhMp3+soBi2itRKyeujpbiY64wmMGEYuDks=
   - secure: QKQF4OPNlKC61cLmEQ1wPFnW8ZCb3my42/6MuT3ztV0Qq7ngodmUL+oJ3kuEZeoDuLHhPWHuW863XrTkrFWyQ6/CdzIsMWLOLxcV3rrAaeAEKD+qFjPHQ8Ix8mYLqj6de5H6z45P6+Jb9Vgxmf8Dc/wPTWuklOSQyFza41g38V0=
   - secure: YSBr3jJXQPiljS1IKinjnrpPT0fcL0WLIi7oeUQzcYHDLjVd9uPuQGHHdPApqBLRXzfYga8Mi8+dPtvY2r1gT6Djr8ynCoKTEFxI923ZdjRImSA5UtwAedeZ23pwsMaw4o41DtZhzQM6gRwacIwkpEqEqAPC432tmf59Izj4trA=
+  - secure: VSPSAeC+wvITfBhS/KTdgVEd5azLZGAB6ve8cgqGHLid3ffHEHSWYUpcVP4eSoUlP8NfP+AfK/IdbgDAr3bxz1XhKO9ZT3sx8M3Zl5RgdoRghxuDkmgWaZ1PqPWsLpqR0bLzOO2NhLaEJ6Juo6tfJjTySkzGUnIB15T7TashVMQ=
