--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -3,6 +3,13 @@ changelog:
    -
     changes: 
       - 
+        text: "Windows Universal compatibility"
+        type: improvement
+    date: Jan 11, 18
+    version: v4.0-beta3 
+   -
+    changes: 
+      - 
         text: "Leave fixes"
         type: improvement
     date: Dec 26, 17
@@ -242,7 +249,8 @@ supported-platforms:
       - Mac OS X 10.8+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support.
     editors:
       - Unity 5.5.1
+      - Unity 2017.2.0f3
 name: unity
 schema: 1
 scm: github.com/pubnub/unity
-version: “3.7.8”
+version: “v4.0-beta3”
