Cleanup/Codacy fixes

--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -3,6 +3,13 @@ changelog:
    -
     changes: 
       - 
+        text: "Cleanup"
+        type: improvement
+    date: Jan 16, 18
+    version: v4.0-beta4 
+   -
+    changes: 
+      - 
         text: "Windows Universal compatibility"
         type: improvement
     date: Jan 11, 18
@@ -253,4 +260,4 @@ supported-platforms:
 name: unity
 schema: 1
 scm: github.com/pubnub/unity
-version: “v4.0-beta3”
+version: “v4.0-beta4”
