--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -3,6 +3,13 @@ changelog:
    -
     changes: 
       - 
+        text: "Cleanup"
+        type: improvement
+    date: Jan 22, 18
+    version: v4.0-beta6
+   -
+    changes: 
+      - 
         text: "Logging enhancements"
         type: improvement
     date: Jan 18, 18
@@ -267,4 +274,4 @@ supported-platforms:
 name: unity
 schema: 1
 scm: github.com/pubnub/unity
-version: “v4.0-beta5”
+version: “v4.0-beta6”
