--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
 language: android
 os: osx
+sudo: required
 android:
   components:
+    - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
+    - platform-tools
+    - build-tools-26.0.1
     - build-tools-26.0.2
     - android-26
+    - extra-android-support
     - sys-img-armeabi-v7a-android-tv-l
     - add-on
     - extra
-    - tools
-    - platform-tools
 
 branches:
   only:
@@ -18,7 +21,7 @@ notifications:
     on_success: never
     on_failure: change
 before_script:
-  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &    
