--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: android
 os: osx
 sudo: required
+dist: trusty
 android:
   components:
     - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
