--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,28 @@
 language: android
 os: osx
 sudo: required
-dist: trusty
-group: edge
+env:
+ global:
+ - ANDROID_API=24
+ - EMULATOR_API=21
+ - ANDROID_BUILD_TOOLS=24.0.2
+ - ADB_INSTALL_TIMEOUT=5 # minutes
 android:
-  components:
-    - tools
-    - platform-tools
-    - build-tools-25.0.3
-    - android-25
-    - extra-android-support
-    - sys-img-armeabi-v7a-android-tv-l
-    - add-on
-    - extra
+ components:
+ - tools
+ - platform-tools
+ - build-tools-$ANDROID_BUILD_TOOLS
+ - android-$ANDROID_API
+ - android-$EMULATOR_API_LEVEL
+ - extra-google-m2repository
+ - extra-android-m2repository # for design library
+ - addon-google_apis-google-19 # google play services
+ - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+ - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
+ licenses:
+ - android-sdk-preview-license-.+
+ - android-sdk-license-.+
+ - google-gdk-license-.+
 
 branches:
   only:
@@ -21,13 +31,18 @@ notifications:
   email:
     on_success: never
     on_failure: change
-before_script:
-  - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &    
+before_install:
+- mkdir "$ANDROID_HOME/licenses" || true
+- echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > 
+"$ANDROID_HOME/licenses/android-sdk-license"
+- echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"    
 install:
 - sudo -E sh ./TravisScripts/install.sh
+before_script:
+- echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+- emulator -avd test -no-skin -no-audio -no-window &
+- android-wait-for-emulator
+- adb shell input keyevent 82 & 
 script:
 - sudo -E sh ./TravisScripts/build.sh
 env:
