--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,15 @@ language: android
 os: osx
 sudo: required
 
-before_cache:
- - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
- - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-cache:
- directories:
- - $HOME/.gradle/caches/
- - $HOME/.gradle/wrapper/
 env:
  global:
  - ANDROID_API=24
- - EMULATOR_API=21
+ - EMULATOR_API=24
  - ANDROID_BUILD_TOOLS=24.0.2
  - ADB_INSTALL_TIMEOUT=5 # minutes
 android:
  components:
+ - tools
  - tools
  - platform-tools
  - build-tools-$ANDROID_BUILD_TOOLS
@@ -24,7 +18,6 @@ android:
  - android-$EMULATOR_API_LEVEL
  - extra-google-m2repository
  - extra-android-m2repository # for design library
- - addon-google_apis-google-19 # google play services
  - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
  - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
  licenses:
@@ -44,8 +37,6 @@ before_install:
 - mkdir "$ANDROID_HOME/licenses" || true
 - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
 - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
-- chmod +x gradlew
-- ./gradlew dependencies || true # DON'T ADD unless you are getting "Install missing components using SDK manager"
 
 install:
 - sudo -E sh ./TravisScripts/install.sh
