--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,12 @@ language: android
 os: osx
 sudo: required
 dist: trusty
-env:
- global:
- - ANDROID_API=26
- - EMULATOR_API=26
- - ANDROID_BUILD_TOOLS=26.0.2
- - ADB_INSTALL_TIMEOUT=5 # minutes
 android:
  components:
     - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
     - platform-tools
-    - build-tools-26.0.1
-    - build-tools-26.0.2
-    - android-26
+    - build-tools-$ANDROID_BUILD_TOOLS
+    - android-$ANDROID_API
     - extra-android-support
  licenses:
  - android-sdk-preview-license-.+
@@ -37,7 +30,7 @@ before_install:
 install:
 - sudo -E sh ./TravisScripts/install.sh
 before_script:
-- echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+- echo no | android create avd --force -n test -t android-$EMULATOR_API --abi armeabi-v7a
 - emulator -avd test -no-skin -no-audio -no-window &
 - android-wait-for-emulator
 - adb shell input keyevent 82 & 
@@ -45,6 +38,10 @@ script:
 - sudo -E sh ./TravisScripts/build.sh
 env:
   global:
+  - ANDROID_API=25
+  - EMULATOR_API=21
+  - ANDROID_BUILD_TOOLS=25.0.3
+  - ADB_INSTALL_TIMEOUT=5 # minutes    
   - UNITYCI_PROJECT_NAME="PubNubUnity"
   - secure: sUu1lt5DjWdu5yipWJ/P3feodjp0wPePj7d5KmDI+nbhZ3OidPGWxXGSYuRGbbcb5x0kuQy3sECYOaIGFEg8jQlX8CfPt6ImUVntm5UvFbd0f7720FolqF1axGXykDmBdm50aVtmL5m2eb8mTGciJstjppKn0Hppt5KVCuprXAs=
   - secure: mHp1xygfk5LePe5uMnKl9qmlZS4KyStaHoJydcLovKAPBxXbrASj3jC2vdgzJwdK7288X5KwUGQFZCyyaHDSa0WBcluCl933kfmgcJacTTOfC3GdmX0MuMtfEaa8KjC5bnuYOQMDZ73/XAK7lLGIzQXLO393MwrckL+beE/rdY4=
