--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,5 @@
-language: android
+language: generic
 os: osx
-sudo: required
-dist: trusty
-android:
- components:
-    - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
-    - platform-tools
-    - build-tools-$ANDROID_BUILD_TOOLS
-    - android-$ANDROID_API
-    - extra-android-support
- licenses:
- - android-sdk-preview-license-.+
- - android-sdk-license-.+
- - google-gdk-license-.+
-
 branches:
   only:
   - CE-2968-UnityV4
@@ -21,27 +7,13 @@ notifications:
   email:
     on_success: never
     on_failure: change
-before_install:
-- openssl aes-256-cbc -K $encrypted_c0801aa05af4_key -iv $encrypted_c0801aa05af4_iv -in example_keystore.jks.enc -out example_keystore.jks -d
-- mkdir "$ANDROID_HOME/licenses" || true
-- echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
-- echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
 
 install:
 - sudo -E sh ./TravisScripts/install.sh
-before_script:
-- echo no | android create avd --force -n test -t android-$EMULATOR_API --abi armeabi-v7a
-- emulator -avd test -no-skin -no-audio -no-window &
-- android-wait-for-emulator
-- adb shell input keyevent 82 & 
 script:
 - sudo -E sh ./TravisScripts/build.sh
 env:
   global:
-  - ANDROID_API=25
-  - EMULATOR_API=21
-  - ANDROID_BUILD_TOOLS=25.0.3
-  - ADB_INSTALL_TIMEOUT=5 # minutes    
   - UNITYCI_PROJECT_NAME="PubNubUnity"
   - secure: sUu1lt5DjWdu5yipWJ/P3feodjp0wPePj7d5KmDI+nbhZ3OidPGWxXGSYuRGbbcb5x0kuQy3sECYOaIGFEg8jQlX8CfPt6ImUVntm5UvFbd0f7720FolqF1axGXykDmBdm50aVtmL5m2eb8mTGciJstjppKn0Hppt5KVCuprXAs=
   - secure: mHp1xygfk5LePe5uMnKl9qmlZS4KyStaHoJydcLovKAPBxXbrASj3jC2vdgzJwdK7288X5KwUGQFZCyyaHDSa0WBcluCl933kfmgcJacTTOfC3GdmX0MuMtfEaa8KjC5bnuYOQMDZ73/XAK7lLGIzQXLO393MwrckL+beE/rdY4=
