Update feature list

--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -215,8 +215,6 @@ changelog:
     date: ~
     version: v3.6.8.1
 features: 
-  access: 
-    - ACCESS-GRANT
   channel-groups: 
     - CHANNEL-GROUPS-ADD-CHANNELS
     - CHANNEL-GROUPS-REMOVE-CHANNELS
@@ -232,8 +230,10 @@ features:
     - PUBLISH-STORE-FLAG
     - PUBLISH-WITH-METADATA
     - PUBLISH-GET
+    - PUBLISH-POST
     - PUBLISH-ASYNC
     - PUBLISH-MESSAGE-TTL
+    - PUBLISH-FIRE
   push: 
     - PUSH-ADD-DEVICE-TO-CHANNELS
     - PUSH-REMOVE-DEVICE-FROM-CHANNELS
@@ -244,6 +244,7 @@ features:
     - STORAGE-INCLUDE-TIMETOKEN
     - STORAGE-START-END
     - STORAGE-COUNT
+    - STORAGE-DELETE-MESSAGES
   subscribe: 
     - SUBSCRIBE-CHANNELS
     - SUBSCRIBE-CHANNEL-GROUPS
@@ -256,6 +257,9 @@ features:
     - SUBSCRIBE-PUBLISHER-UUID
   time: 
     - TIME-TIME
+  others:
+    - TELEMETRY
+    - REQUEST-MESSAGE-COUNT-EXCEEDED
 supported-platforms:
   - 
     version: PubNub Unity SDK
@@ -270,7 +274,7 @@ supported-platforms:
       - Mac OS X 10.8+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support.
     editors:
       - Unity 5.5.1
-      - Unity 2017.2.0f3
+      - Unity 2017.3.0f3
 name: unity
 schema: 1
 scm: github.com/pubnub/unity
