Here Now Refresh

--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -226,6 +226,7 @@ features:
     - PRESENCE-SET-STATE
     - PRESENCE-GET-STATE
     - PRESENCE-HEARTBEAT
+    - PRESENCE-HERE-NOW-REFRESH
   publish: 
     - PUBLISH-STORE-FLAG
     - PUBLISH-WITH-METADATA
