--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ notifications:
 install:
 - sudo -E sh ./TravisScripts/install.sh
 script:
-- travis_wait 20 sudo -E sh ./TravisScripts/build.sh
+- sudo -E sh ./TravisScripts/build.sh
 env:
   global:
   - UNITYCI_PROJECT_NAME="PubNubUnity"
