--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,21 @@ install:
 - sudo -E sh ./TravisScripts/install.sh
 script:
 - sudo -E sh ./TravisScripts/build.sh
+deploy:
+   provider: releases
+   api_key:
+     secure: ${s}
+   file: $(pwd)/${UNITYCI_PROJECT_NAME}/${UNITYCI_PACKAGE_NAME}.unitypackage
+   skip_cleanup: true
+   on:
+     repo: pubnub/unity
+     #branch: master
+     tags: true
 env:
   global:
+  - UNITYCI_PACKAGE_NAME="PubNub"  
   - UNITYCI_PROJECT_NAME="PubNubUnity"
   - secure: sUu1lt5DjWdu5yipWJ/P3feodjp0wPePj7d5KmDI+nbhZ3OidPGWxXGSYuRGbbcb5x0kuQy3sECYOaIGFEg8jQlX8CfPt6ImUVntm5UvFbd0f7720FolqF1axGXykDmBdm50aVtmL5m2eb8mTGciJstjppKn0Hppt5KVCuprXAs=
   - secure: mHp1xygfk5LePe5uMnKl9qmlZS4KyStaHoJydcLovKAPBxXbrASj3jC2vdgzJwdK7288X5KwUGQFZCyyaHDSa0WBcluCl933kfmgcJacTTOfC3GdmX0MuMtfEaa8KjC5bnuYOQMDZ73/XAK7lLGIzQXLO393MwrckL+beE/rdY4=
   - secure: S94Ss9BjnnA4NiUVdtuvuEP5+n67MKZa/qmsgKSA+6JWxKghHRB1lBEDDSTmPt+LctgpryyYQYvrdpjhXREy7qkXB6wjS9PEd44axeHYyX2z7RjBZtfnIsNvMbVU599h/1Xb6LeeN3ZOiPJzxGyoKAGlbUykfrpFAqUDvZm43cM=
+  - secure: f/B/NdkEaTYmfY5xs6oCcCwK4W04SebzXzrPXqOO7Bamp4bIeFOvub4M0funAuC/tHfhGS9hYvrj824aoSSOrYhdsLh6g21WobSaUVPqnNUn/1tpSkQYDQG47i+gldBKCjgtouVav0/sA6njtiJdHmp9UZ/C2OiEGfUL0PBcwX0=
