--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -3,6 +3,13 @@ changelog:
   - 
     changes: 
       - 
+        text: "Message Counts API"
+        type: improvement 
+    date: "Feb 25, 19"
+    version: v4.1.1
+  - 
+    changes: 
+      - 
         text: "BREAKING CHANGE: Fixed a typo by renaming the `event` from `SusbcribeCallback` to `SubscribeCallback` and the `EventArgs` from `SusbcribeEventEventArgs` to `SubscribeEventEventArgs` "
         type: improvement 
     date: "Feb 18, 19"
@@ -358,4 +365,4 @@ supported-platforms:
       - "Ubuntu 12.04+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support."
       - "Mac OS X 10.8+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support."
     version: "PubNub Unity SDK"
-version: v4.1.0
+version: v4.1.1
