Message Count Changes

--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -1,5 +1,12 @@
 --- 
-changelog: 
+changelog:
+  - 
+    changes: 
+      - 
+        text: "Message Counts simplification (Breaking changes from the previous version)."
+        type: improvement
+    date: Mar 13, 19  
+    version: v4.2.0
   - 
     changes: 
       - 
@@ -365,4 +372,4 @@ supported-platforms:
       - "Ubuntu 12.04+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support."
       - "Mac OS X 10.8+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support."
     version: "PubNub Unity SDK"
-version: v4.1.1
+version: v4.2.0
