--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -3,6 +3,13 @@ changelog:
   - 
     changes: 
       - 
+        text: "Objects"
+        type: improvement
+    date: Nov 8, 19  
+    version: v4.4.0  
+  - 
+    changes: 
+      - 
         text: "Signals"
         type: improvement
       - 
@@ -401,4 +408,4 @@ supported-platforms:
       - "Ubuntu 12.04+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support."
       - "Mac OS X 10.8+, with Graphics card DX9 (shader model 3.0) or DX11 with feature level 9.3 capabilities; and CPU SSE2 instruction set support."
     version: "PubNub Unity SDK"
-version: v4.3.0
+version: v4.4.0
